@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-06-20:
+
+- Fixed a race condition that could cause redirections to fail with a
+  "cannot create" or "cannot open" error while processing a signal trap.
+
 2022-06-18:
 
 - Fixed a bug where, with the monitor or pipefail option on, the shell
